Finished simple structure of sidebar with dynamic icons and logout button. Added table and header in each main screen all wrapped around a <div> with flexbox. Need to finish style and check for code generalization.

--- a/src/components/functionalComponents/sideBar/sideBar.css
+++ b/src/components/functionalComponents/sideBar/sideBar.css
@@ -11,3 +11,11 @@
   flex-direction: column;
   justify-content: space-between;
 }
+
+.logoutButton {
+  background-color: #667a8a;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+}
