--- a/src/components/functionalComponents/sideNav/sideNav.css
+++ b/src/components/functionalComponents/sideNav/sideNav.css
@@ -5,12 +5,24 @@
   margin-top: 30px;
 }
 .menuListWrapper li {
-  padding: 10px 30px;
+  display: flex;
+  align-items: center;
+  padding: 15px 0;
+  margin: 0 30px;
+  width: 100%;
   list-style: none;
-  text-decoration: none;
   cursor: pointer;
+  font-size: 14px;
+  color: #667a8a;
+}
+
+.menuListWrapper li a {
+  text-decoration: none;
+  margin: 0 10px;
 }
 
 .active {
-  background-color: red;
+  background-color: #e9f5fe;
+  color: #0c7fda;
+  font-weight: 700;
 }
