--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -15,7 +15,7 @@ code {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: "Poppins";
+  /* font-family: "Poppins"; */
 }
 
 .screen-title {
