deleted sidebar border-bottom

--- a/src/components/functionalComponents/sideBar/sideBar.css
+++ b/src/components/functionalComponents/sideBar/sideBar.css
@@ -3,6 +3,7 @@
   height: calc(100vh - 70px);
   padding: 20px 30px;
   border: 1px solid #ddd;
+  border-bottom: none;
   background-color: #ffffff;
 }
 
