--- a/src/components/hookComponents/form/form.css
+++ b/src/components/hookComponents/form/form.css
@@ -17,3 +17,32 @@
   border-radius: 7px;
   width: 300px;
 }
+
+.shoeListMenu {
+  position: relative;
+  margin: 10px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 7px;
+  font-family: "Poppins";
+}
+
+.shoeListWrapper {
+  position: absolute;
+  overflow: auto;
+  max-height: 150px;
+  margin-top: 10px;
+  border-radius: 10px;
+  min-width: 200px;
+  background-color: white;
+}
+
+.addOrderFormButton {
+  display: flex;
+  bottom: 19px;
+  height: 200px;
+  left: 255px;
+  right: 45px;
+  align-items: end;
+  justify-content: flex-end;
+}
