--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -31,3 +31,20 @@ a {
 .screen-bg {
   background-color: #f1f1f1;
 }
+
+.flex {
+  display: flex;
+}
+
+.flex-center {
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.w-100 {
+  width: 100%;
+}
