--- a/src/components/functionalComponents/viewDetails/viewDetails.css
+++ b/src/components/functionalComponents/viewDetails/viewDetails.css
@@ -1,12 +1,12 @@
 .viewDetailsWrap {
-  border: 1px solid black;
+  border: 2px solid #0171bc;
   border-radius: 10px;
   font-family: "Poppins";
   padding: 8px 50px;
-  background-color: #e9f5fe;
+  background-color: white;
 }
 
-.viewDetails p {
+.details-paragraph {
   padding: 7px;
 }
 
@@ -14,6 +14,6 @@
   font-weight: bold;
 }
 
-.value-text {
+/* .value-text {
   text-transform: capitalize;
-}
+} */
