--- a/src/styles/personalArea/personalArea.css
+++ b/src/styles/personalArea/personalArea.css
@@ -4,8 +4,6 @@
 }
 
 .personalArea-form .form {
-  width: calc(100vw - 300px);
-  margin: 0 auto;
 }
 
 .personalArea-user {
@@ -15,10 +13,29 @@
   flex-direction: column;
 }
 
-.personalArea-form form {
+/* .personalArea-form form {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 0 auto;
   width: 700px;
+} */
+
+.user-details-container {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  gap: 10px;
+  margin: 0 auto;
+  margin-top: 20px;
+  width: fit-content;
+  padding: 40px 30px;
+  border: 2px solid #0171bc;
+  border-radius: 10px;
+}
+
+.addresses-link {
+  color: #0171bc;
+  font-weight: bold;
+  font-size: 1.4rem;
 }
