added more padding to user details

--- a/src/styles/personalArea/personalArea.css
+++ b/src/styles/personalArea/personalArea.css
@@ -7,7 +7,7 @@
   margin: 0 auto;
   margin-top: 20px;
   min-width: max-content;
-  padding: 40px;
+  padding: 40px 80px;
   border: 2px solid #0171bc;
   border-radius: 10px;
 }
